--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
         </div>
     </div>
     
-    <script src="game-online.js"></script>
+    <!-- PeerJS - Conexión P2P gratuita -->
+    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
+    <script src="game-peer.js"></script>
 </body>
 </html>
