--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p class="reveal-instruction">Memoriza tu palabra y pásale el dispositivo al siguiente jugador</p>
             </div>
             <button id="next-player" class="btn hidden">Siguiente Jugador</button>
-            <button id="start-voting" class="btn hidden">Comenzar Votación</button>
+            <button id="play-again" class="btn hidden">Jugar de Nuevo</button>
         </div>
 
         <!-- Online Game Screen -->
@@ -119,20 +119,6 @@
             <button id="back-to-lobby" class="btn btn-secondary hidden">Volver al Lobby</button>
         </div>
 
-        <!-- Voting Screen -->
-        <div id="voting-screen" class="screen hidden">
-            <h2>Votación</h2>
-            <p class="instruction">¿Quién creen que es el impostor?</p>
-            <div id="voting-options" class="cards-container"></div>
-            <button id="reveal-impostors" class="btn">Revelar Impostores</button>
-        </div>
-
-        <!-- Results Screen -->
-        <div id="results-screen" class="screen hidden">
-            <h2>Resultados</h2>
-            <div id="results-content"></div>
-            <button id="play-again" class="btn">Jugar de Nuevo</button>
-        </div>
     </div>
     
     <!-- PeerJS - Conexión P2P gratuita -->
