--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
         </div>
 
     </div>
+
+    <!-- Custom Toast Notifications -->
+    <div id="toast-container"></div>
     
     <!-- PeerJS - Conexión P2P gratuita -->
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
