--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="current-turn-display">
                     <p>Turno de: <strong id="current-turn-oral">Esperando...</strong></p>
                 </div>
-                <button id="next-turn-oral-btn" class="btn">Siguiente Turno</button>
+                <button id="next-turn-oral-btn" class="btn hidden">Pasar Turno</button>
             </div>
             
             <div class="discussion-section hidden" id="discussion-section-oral">
@@ -163,7 +163,7 @@
                 <div class="current-turn-display">
                     <p>Turno de: <strong id="current-turn-chat">Esperando...</strong></p>
                 </div>
-                <button id="next-turn-chat-btn" class="btn">Siguiente Turno</button>
+                <button id="next-turn-chat-btn" class="btn hidden">Pasar Turno</button>
             </div>
             
             <div class="discussion-section hidden" id="discussion-section-chat">
