Cambiar nombre del juego a 'El Impostor'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Juego del Impostor</title>
+    <title>El Impostor</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🎭</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="container">
         <!-- Name Input Screen -->
         <div id="name-screen" class="screen">
-            <h1>El Juego del Impostor</h1>
+            <h1>El Impostor</h1>
             <p class="instruction">¿Cómo te llamas?</p>
             <div class="form-group">
                 <input type="text" id="player-name-input" class="form-control" placeholder="Tu nombre" maxlength="20" autofocus>
@@ -21,7 +21,7 @@
 
         <!-- Mode Selection Screen -->
         <div id="mode-screen" class="screen hidden">
-            <h1>El Juego del Impostor</h1>
+            <h1>El Impostor</h1>
             <p class="instruction">Selecciona el modo de juego</p>
             <div class="mode-buttons">
                 <button id="local-mode-btn" class="mode-btn">
