Volver a boton de pasar turno global - cualquiera puede pasar

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="current-turn-display">
                     <p>Turno de: <strong id="current-turn-oral">Esperando...</strong></p>
                 </div>
-                <button id="next-turn-oral-btn" class="btn hidden">Pasar Turno</button>
+                <button id="next-turn-oral-btn" class="btn">Pasar Turno</button>
             </div>
             
             <div class="discussion-section hidden" id="discussion-section-oral">
@@ -174,7 +174,7 @@
                 <div class="current-turn-display">
                     <p>Turno de: <strong id="current-turn-chat">Esperando...</strong></p>
                 </div>
-                <button id="next-turn-chat-btn" class="btn hidden">Pasar Turno</button>
+                <button id="next-turn-chat-btn" class="btn">Pasar Turno</button>
             </div>
             
             <div class="discussion-section hidden" id="discussion-section-chat">
