Agregar footer con creditos y copyright

--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
     <button id="toggle-chat-btn" class="chat-toggle-btn hidden">
         💬
     </button>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>© 2025 El Impostor - Creado por <strong>Sebastián</strong></p>
+    </footer>
     
     <!-- PeerJS - Conexión P2P gratuita -->
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
