Actualizar emojis a versiones mas modernas y minimalistas

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <p class="instruction">Selecciona el modo de juego</p>
             <div class="mode-buttons">
                 <button id="local-mode-btn" class="mode-btn">
-                    <span class="mode-icon">👥</span>
+                    <span class="mode-icon">📱</span>
                     <span class="mode-title">Modo Local</span>
                     <span class="mode-desc">Jugar en un solo dispositivo</span>
                 </button>
                 <button id="online-mode-btn" class="mode-btn">
-                    <span class="mode-icon">🌐</span>
+                    <span class="mode-icon">🔗</span>
                     <span class="mode-title">Modo Online</span>
                     <span class="mode-desc">Crear o unirse a una sala</span>
                 </button>
@@ -43,12 +43,12 @@
             <p class="instruction">Selecciona el tipo de juego</p>
             <div class="mode-buttons">
                 <button id="oral-mode-btn" class="mode-btn">
-                    <span class="mode-icon">🎤</span>
+                    <span class="mode-icon">🗣️</span>
                     <span class="mode-title">Modo Oral</span>
                     <span class="mode-desc">Con turnos + discusión por voz</span>
                 </button>
                 <button id="chat-mode-btn" class="mode-btn">
-                    <span class="mode-icon">💬</span>
+                    <span class="mode-icon">✉️</span>
                     <span class="mode-title">Modo Chat</span>
                     <span class="mode-desc">Con turnos + chat y votación</span>
                 </button>
@@ -147,7 +147,7 @@
             <button id="toggle-word-btn" class="btn btn-small">👁️ Ocultar Palabra</button>
             
             <div class="turn-section" id="turn-section-oral">
-                <h3>🎤 Fase de Turnos</h3>
+                <h3>⏱️ Fase de Turnos</h3>
                 <div class="current-turn-display">
                     <p>Turno de: <strong id="current-turn-oral">Esperando...</strong></p>
                 </div>
@@ -170,7 +170,7 @@
             <button id="toggle-word-chat-btn" class="btn btn-small">👁️ Ocultar Palabra</button>
             
             <div class="turn-section" id="turn-section-chat">
-                <h3>💬 Fase de Turnos</h3>
+                <h3>⏱️ Fase de Turnos</h3>
                 <div class="current-turn-display">
                     <p>Turno de: <strong id="current-turn-chat">Esperando...</strong></p>
                 </div>
