Implementar control de turnos solo para anfitrion y boton siguiente ronda

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             <div class="discussion-section hidden" id="discussion-section-oral">
                 <h3>💬 Discusión Libre</h3>
                 <p>Todos pueden hablar libremente ahora</p>
+                <button id="next-round-oral-btn" class="btn hidden">Siguiente Ronda</button>
             </div>
             
             <button id="back-to-lobby" class="btn btn-secondary">Volver al Lobby</button>
@@ -188,7 +189,7 @@
                         <button id="send-message-btn" class="btn btn-small">Enviar</button>
                     </div>
                 </div>
-                <button id="start-vote-btn" class="btn">Iniciar Votación</button>
+                <button id="start-vote-btn" class="btn hidden">Iniciar Votación</button>
             </div>
             
             <button id="back-to-lobby-chat" class="btn btn-secondary">Volver al Lobby</button>
