Implementar tabla de puntuaciones individual - solo impostores suman puntos

--- a/index.html
+++ b/index.html
@@ -77,16 +77,10 @@
         <div id="lobby-screen" class="screen hidden">
             <h2>Sala: <span id="room-code-display"></span></h2>
             
-            <!-- Scoreboard -->
-            <div class="scoreboard">
-                <div class="score-item">
-                    <span class="score-label">🔴 Impostores:</span>
-                    <span class="score-value" id="impostor-score">0</span>
-                </div>
-                <div class="score-item">
-                    <span class="score-label">🔵 Tripulación:</span>
-                    <span class="score-value" id="crew-score">0</span>
-                </div>
+            <!-- Player Scoreboard -->
+            <div class="player-scoreboard">
+                <h3>🏆 Tabla de Puntuaciones</h3>
+                <div id="score-table" class="score-table"></div>
             </div>
             
             <div class="share-link">
