Implementar sistema de puntos progresivos - cada ronda vale mas puntos

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             <!-- Player Scoreboard -->
             <div class="player-scoreboard">
                 <h3>🏆 Tabla de Puntuaciones</h3>
+                <div class="round-indicator">
+                    <span>Ronda Actual: <strong id="current-round-display">1</strong></span>
+                    <span class="round-info">Próxima ronda vale: <strong id="next-round-points">1</strong> pts</span>
+                </div>
                 <div id="score-table" class="score-table"></div>
             </div>
             
