Agregar boton Siguiente Ronda en modo local, resetear tema y animaciones de color

--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
                 <p class="reveal-instruction">Memoriza tu palabra y pásale el dispositivo al siguiente jugador</p>
             </div>
             <button id="next-player" class="btn hidden">Siguiente Jugador</button>
-            <button id="play-again" class="btn hidden">Jugar de Nuevo</button>
+            <div class="game-end-buttons hidden" id="game-end-buttons">
+                <button id="next-round-local" class="btn">🔄 Siguiente Ronda</button>
+                <button id="play-again" class="btn btn-secondary">🏠 Volver al Inicio</button>
+            </div>
         </div>
 
         <!-- Online Game Screen (Oral Mode) -->
