Separar Siguiente Ronda (mismas palabras) y Nueva Partida (palabras nuevas)

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             <button id="next-player" class="btn hidden">Siguiente Jugador</button>
             <div class="game-end-buttons hidden" id="game-end-buttons">
                 <button id="next-round-local" class="btn">🔄 Siguiente Ronda</button>
+                <button id="new-game-local" class="btn btn-secondary">🎲 Nueva Partida</button>
                 <button id="play-again" class="btn btn-secondary">🏠 Volver al Inicio</button>
             </div>
         </div>
