Agregar pantalla de bienvenida con animaciones y mover entrada de nombre a lobby online

--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
 </head>
 <body>
     <div class="container">
-        <!-- Name Input Screen -->
-        <div id="name-screen" class="screen">
-            <h1>El Impostor</h1>
-            <p class="instruction">¿Cómo te llamas?</p>
-            <div class="form-group">
-                <input type="text" id="player-name-input" class="form-control" placeholder="Tu nombre" maxlength="20" autofocus>
-            </div>
-            <button id="continue-btn" class="btn">Continuar</button>
-            <button id="show-rules-btn" class="btn btn-secondary">📖 Cómo Jugar</button>
+        <!-- Welcome Screen -->
+        <div id="welcome-screen" class="screen welcome-screen">
+            <h1 class="welcome-title">El Impostor</h1>
+            <p class="welcome-subtitle">Toca en cualquier lugar para comenzar</p>
         </div>
 
         <!-- Mode Selection Screen -->
         <div id="mode-screen" class="screen hidden">
-            <h1>El Impostor</h1>
+            <h1 class="mode-title-animated">El Impostor</h1>
             <p class="instruction">Selecciona el modo de juego</p>
             <div class="mode-buttons">
                 <button id="local-mode-btn" class="mode-btn">
@@ -33,11 +28,12 @@
                     <span class="mode-desc">Jugar en un solo dispositivo</span>
                 </button>
                 <button id="online-mode-btn" class="mode-btn">
-                    <span class="mode-icon">🔗</span>
+                    <span class="mode-icon">🌐</span>
                     <span class="mode-title">Modo Online</span>
-                    <span class="mode-desc">Crear o unirse a una sala</span>
+                    <span class="mode-desc">Jugar con amigos en línea</span>
                 </button>
             </div>
+            <button id="show-rules-btn" class="btn btn-secondary">📖 Cómo Jugar</button>
         </div>
 
         <!-- Online Mode Selection -->
