Agregar version query al CSS para romper cache del navegador

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="manifest" href="manifest.json">
     
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=2">
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
