--- a/index.html
+++ b/index.html
@@ -209,6 +209,21 @@
         <div id="game-screen" class="screen hidden">
             <h2>Turno del Jugador <span id="current-player-number">1</span></h2>
             <p class="instruction">Toca la pantalla para ver tu palabra</p>
+            
+            <!-- Envelope Animation -->
+            <div id="envelope-container" class="envelope-container">
+                <div class="envelope">
+                    <div class="envelope-flap"></div>
+                    <div class="envelope-body"></div>
+                    <div class="envelope-card" id="envelope-card">
+                        <div class="card-content" id="card-content">
+                            <div class="mystery">?</div>
+                        </div>
+                    </div>
+                </div>
+                <p class="tap-instruction">👆 Toca para abrir</p>
+            </div>
+            
             <div id="reveal-card" class="reveal-card hidden">
                 <div class="word-display" id="word-display"></div>
                 <p class="reveal-instruction">Memoriza tu palabra y pásale el dispositivo al siguiente jugador</p>
