--- a/index.html
+++ b/index.html
@@ -210,18 +210,19 @@
             <h2>Turno del Jugador <span id="current-player-number">1</span></h2>
             <p class="instruction">Toca la pantalla para ver tu palabra</p>
             
-            <!-- Envelope Animation -->
-            <div id="envelope-container" class="envelope-container">
-                <div class="envelope">
-                    <div class="envelope-flap"></div>
-                    <div class="envelope-body"></div>
-                    <div class="envelope-card" id="envelope-card">
-                        <div class="card-content" id="card-content">
-                            <div class="mystery">?</div>
-                        </div>
+            <!-- Card Flip Animation -->
+            <div id="card-container" class="card-container">
+                <div class="card-flip" id="card-flip">
+                    <div class="card-front">
+                        <div class="card-pattern"></div>
+                        <div class="card-icon">🎴</div>
+                        <div class="card-question">?</div>
+                    </div>
+                    <div class="card-back" id="card-back">
+                        <div class="card-result" id="card-result">?</div>
                     </div>
                 </div>
-                <p class="tap-instruction">👆 Toca para abrir</p>
+                <p class="tap-instruction">👆 Toca para revelar</p>
             </div>
             
             <div id="reveal-card" class="reveal-card hidden">
