--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         </div>
                         <div class="stat-card">
                             <div class="stat-value" id="stat-wins-crew">0</div>
-                            <div class="stat-label">Victorias Tripulación</div>
+                            <div class="stat-label">Victorias Crew</div>
                         </div>
                         <div class="stat-card">
                             <div class="stat-value" id="stat-winrate">0%</div>
@@ -277,7 +277,7 @@
                     <div class="admin-stat-icon">🔵</div>
                     <div class="admin-stat-info">
                         <div class="admin-stat-value" id="admin-crew-wins">0</div>
-                        <div class="admin-stat-label">Victorias Tripulación</div>
+                        <div class="admin-stat-label">Victorias Crew</div>
                     </div>
                 </div>
             </div>
@@ -494,7 +494,7 @@
                 <p>Todos pueden hablar libremente ahora</p>
                 <div class="victory-buttons hidden" id="victory-buttons-oral">
                     <button id="impostor-win-oral-btn" class="btn btn-impostor">🔴 Ganó Impostor</button>
-                    <button id="crew-win-oral-btn" class="btn btn-crew">🔵 Ganó Tripulación</button>
+                    <button id="crew-win-oral-btn" class="btn btn-crew">🔵 Ganó Crew</button>
                 </div>
                 <button id="next-round-oral-btn" class="btn hidden">Siguiente Ronda</button>
             </div>
@@ -543,7 +543,7 @@
                 </div>
                 <div class="victory-buttons hidden" id="victory-buttons-chat">
                     <button id="impostor-win-chat-btn" class="btn btn-impostor">🔴 Ganó Impostor</button>
-                    <button id="crew-win-chat-btn" class="btn btn-crew">🔵 Ganó Tripulación</button>
+                    <button id="crew-win-chat-btn" class="btn btn-crew">🔵 Ganó Crew</button>
                 </div>
                 <button id="start-vote-btn" class="btn hidden">Iniciar Votación</button>
             </div>
@@ -592,13 +592,13 @@
             
             <div class="rules-section">
                 <h3>🎯 Objetivo del Juego</h3>
-                <p><strong>Civiles:</strong> Descubrir quién es el impostor</p>
+                <p><strong>Crew:</strong> Descubrir quién es el impostor</p>
                 <p><strong>Impostor:</strong> No ser descubierto y ganar puntos</p>
             </div>
 
             <div class="rules-section">
                 <h3>👥 Roles</h3>
-                <p><strong>🔵 Civiles (Mayoría):</strong> Reciben la misma palabra secreta</p>
+                <p><strong>🔵 Crew (Mayoría):</strong> Reciben la misma palabra secreta</p>
                 <p><strong>🔴 Impostor(es):</strong> Reciben la palabra "IMPOSTOR"</p>
             </div>
 
@@ -628,7 +628,7 @@
                     <ul>
                         <li>Solo el anfitrión puede declarar al ganador</li>
                         <li><strong>🔴 Ganó Impostor:</strong> Si no fue descubierto</li>
-                        <li><strong>🔵 Ganó Tripulación:</strong> Si descubrieron al impostor</li>
+                        <li><strong>🔵 Ganó Crew:</strong> Si descubrieron al impostor</li>
                     </ul>
                 </div>
             </div>
@@ -640,7 +640,7 @@
                     <li><strong>Ronda 2:</strong> +2 puntos si gana el impostor</li>
                     <li><strong>Ronda 3:</strong> +3 puntos si gana el impostor</li>
                     <li><strong>Y así sucesivamente...</strong></li>
-                    <li>⚠️ La tripulación NO suma puntos</li>
+                    <li>⚠️ La Crew NO suma puntos</li>
                 </ul>
             </div>
 
@@ -648,14 +648,14 @@
                 <h3>🎲 Opciones del Anfitrión</h3>
                 <ul>
                     <li><strong>Siguiente Ronda:</strong> Continuar jugando sin volver al lobby</li>
-                    <li><strong>Ganó Impostor/Tripulación:</strong> Terminar ronda y volver al lobby</li>
+                    <li><strong>Ganó Impostor/Crew:</strong> Terminar ronda y volver al lobby</li>
                 </ul>
             </div>
 
             <div class="rules-section">
                 <h3>💡 Consejos</h3>
                 <ul>
-                    <li>🎭 <strong>Civiles:</strong> Den pistas sutiles para identificarse entre ustedes</li>
+                    <li>🎭 <strong>Crew:</strong> Den pistas sutiles para identificarse entre ustedes</li>
                     <li>🕵️ <strong>Impostor:</strong> Escucha atentamente y trata de adivinar la palabra</li>
                     <li>🤔 Observa las reacciones y descripciones de los demás</li>
                     <li>🗣️ Sé creativo pero no demasiado obvio</li>
