--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                     <label>🔑 Confirmar Contraseña</label>
                     <input type="password" id="register-password-confirm" class="form-control" placeholder="Repite tu contraseña" required>
                 </div>
+                <div class="form-group">
+                    <label>🔐 Código Admin (opcional)</label>
+                    <input type="text" id="register-admin-code" class="form-control" placeholder="Deja vacío si no eres admin">
+                    <small style="color: rgba(255, 255, 255, 0.5); font-size: 0.8rem;">Código: ADMIN2025</small>
+                </div>
                 <button type="submit" class="btn btn-primary">Crear Cuenta</button>
             </form>
             
