Agregar seccion en panel admin para ver todos los usuarios con datos completos, solo visible para admins, con boton copiar JSON

--- a/index.html
+++ b/index.html
@@ -333,6 +333,16 @@
                 </div>
             </div>
             
+            <!-- Ver Datos de Usuarios (Solo Admin) -->
+            <div class="admin-users-data">
+                <h3>👥 Ver Todos los Usuarios (Datos Completos)</h3>
+                <button id="show-users-data-btn" class="btn">👁️ Mostrar Datos de Usuarios</button>
+                <button id="copy-users-data-btn" class="btn hidden">📋 Copiar JSON</button>
+                <div id="users-data-display" class="users-data-display hidden">
+                    <pre id="users-json"></pre>
+                </div>
+            </div>
+            
             <!-- Danger Zone -->
             <div class="admin-danger-zone">
                 <h3>⚠️ Zona Peligrosa</h3>
