Actualizar crear-admin.html con usuario sahumerio y contraseña Sebas091206

--- a/crear-admin.html
+++ b/crear-admin.html
@@ -104,17 +104,17 @@
 
         <div class="form-group">
             <label>👤 Usuario:</label>
-            <input type="text" id="username" value="admin" placeholder="Nombre de usuario">
+            <input type="text" id="username" value="sahumerio" placeholder="Nombre de usuario">
         </div>
 
         <div class="form-group">
             <label>🔑 Contraseña:</label>
-            <input type="password" id="password" value="admin123" placeholder="Contraseña">
+            <input type="password" id="password" value="Sebas091206" placeholder="Contraseña">
         </div>
 
         <div class="form-group">
             <label>📧 Email (opcional):</label>
-            <input type="email" id="email" value="admin@impostor.com" placeholder="Email">
+            <input type="email" id="email" value="sahumerio@impostor.com" placeholder="Email">
         </div>
 
         <button onclick="crearUsuario()">✅ Crear Usuario Admin</button>
