--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
                 </div>
                 <div class="form-group">
                     <label>🔑 Contraseña</label>
-                    <input type="password" id="login-password" class="form-control" placeholder="Tu contraseña" required>
+                    <div class="password-input-container">
+                        <input type="password" id="login-password" class="form-control" placeholder="Tu contraseña" required>
+                        <button type="button" class="password-toggle-btn" id="toggle-login-password">👁️</button>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Entrar</button>
             </form>
@@ -115,11 +118,17 @@
                 </div>
                 <div class="form-group">
                     <label>🔑 Contraseña</label>
-                    <input type="password" id="register-password" class="form-control" placeholder="Mínimo 6 caracteres" required minlength="6">
+                    <div class="password-input-container">
+                        <input type="password" id="register-password" class="form-control" placeholder="Mínimo 6 caracteres" required minlength="6">
+                        <button type="button" class="password-toggle-btn" id="toggle-register-password">👁️</button>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>🔑 Confirmar Contraseña</label>
-                    <input type="password" id="register-password-confirm" class="form-control" placeholder="Repite tu contraseña" required>
+                    <div class="password-input-container">
+                        <input type="password" id="register-password-confirm" class="form-control" placeholder="Repite tu contraseña" required>
+                        <button type="button" class="password-toggle-btn" id="toggle-register-password-confirm">👁️</button>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Crear Cuenta</button>
             </form>
