Agregar Firebase Realtime Database como alternativa a Firestore + herramienta visual para ver datos de la base de datos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     <link rel="stylesheet" href="style.css?v=3">
     
     <!-- Firebase -->
-    <script type="module" src="firebase-config.js"></script>
+    <!-- Puedes cambiar entre firebase-config.js (Firestore) y firebase-realtime-config.js (Realtime DB) -->
+    <script type="module" src="firebase-realtime-config.js"></script>
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
